--- a/BayesianDNABarcodeGap.tex
+++ b/BayesianDNABarcodeGap.tex
@@ -111,7 +111,7 @@ q'_x &= \frac{\#\{d'_{XY} \leq b\}}{\#\{d'_{XY}\}}
 
 \end{figure}
 
-\noindent Hence, Equations (1)-(4) are simply empirical partial means of distances falling at and below, or at and exceeding, given distribution thresholds. Notice further that $a$/$a'$, and $b$ are also the first and $n$th order statistics, $X_{(1)}$ and $X_{(n)}$, respectively, with  $a$/$a' < b$,  which have been pointed out by \citet{phillips2022lack} as important for developing a mathematical theory to test the existence of the DNA barcode gap. Equations (1)-(4) can also be expressed in terms of empirical cumulative distribution functions (ECDFs) (see next section). Distances form a continuous distribution and are easily computed from a model of DNA sequence evolution, such as uncorrected or corrected p-distances \citep{jukes1969evolution, kimura1980simple} using, for example, the {\tt dist.dna()} function available in the {\tt ape} R package \citep{paradis2004ape}; however, values are \textit{not} independent and identically distributed (IID) because estimated standard errors (SEs) will depend on both the number of species sampled with the genus under study, as well as the number of specimens sampled within a target species. In \citet{phillips2024measure}, To tease this out, \citet{phillips2024measure} suggests plotting estimator values against their estimated standard errors, along with a simple downsampling scheme.  In the case of two species comprising a focal genus, one well sampled and the other poorly sampled, values close to zero obtained from Equations (1)-(4) for the sufficiently sampled species will likely possess larger SEs following downsizing \citep{phillips2024measure}. The approach of \citet{phillips2024measure} differs markedly from the traditional definition of the DNA barcoding gap laid out by \citet{meyer2005dna} and \citet{meier2008use} in that the proposed metrics incorporate interspecific distances which \textit{include} the target species of interest. Furthermore, if a focal species is found to have multiple nearest neighbours, then the species possessing the smallest average distance is used. These schemes more accurately account for species' coalescence processes inferred from contemporaneous samples of DNA sequences leading to instances of barcode sequence sharing, such as interspecific hybridization/introgression events \citep{phillips2024measure}. Within equations (3) and (4), the degree of distance distribution overlap between a target taxon and its nearest neighbouring species, gauged from magnitudes of $p'_x$ and $q'_x$, is directly proportional to the amount of time in which the two lineages diverged from the MRCA \citep{phillips2024measure}. Thus, the quantities can be used as a criterion to assess the failure of DNA barcoding in recently radiated taxonomic groups, among other plausible biological explanations.  Note, distances are constrained to the interval [0, 1], whereas the metrics are defined only on the interval [$a$/$a'$, $b$]. Values of the estimators obtained from equations (1)-(4) close to or equal to zero give evidence for separation between intraspecific and interspecific distance distributions; that is, values suggest the presence of a DNA barcode gap for a target species. Conversely, values near or equal to one give evidence for distribution overlap; that is, values likely indicate the absence of a DNA barcode gap. 
+\noindent Hence, Equations (1)-(4) are simply empirical partial means of distances falling at and below, or at and exceeding, given distribution thresholds. Notice further that $a$/$a'$, and $b$ are also the first and $n$th order statistics, $X_{(1)}$ and $X_{(n)}$, respectively, with  $a$/$a' < b$,  which have been pointed out by \citet{phillips2022lack} as important for developing a mathematical theory to test the existence of the DNA barcode gap. Equations (1)-(4) can also be expressed in terms of empirical cumulative distribution functions (ECDFs) (see next section). Distances form a continuous distribution and are easily computed from a model of DNA sequence evolution, such as uncorrected or corrected p-distances \citep{jukes1969evolution, kimura1980simple} using, for example, the {\tt dist.dna()} function available in the {\tt ape} R package \citep{paradis2004ape}; however, values are \textit{not} independent and identically distributed (IID) because estimated standard errors (SEs) will depend on both the number of species sampled with the genus under study, as well as the number of specimens sampled within a target species. In \citet{phillips2024measure}, To tease this out, \citet{phillips2024measure} suggests plotting estimator values against their estimated standard errors, along with a simple downsampling scheme.  In the case of two species comprising a focal genus, one well sampled and the other poorly sampled, values close to zero obtained from Equations (1)-(4) for the sufficiently sampled species will likely possess larger SEs following downsizing to match the number of poorly sampled taxa \citep{phillips2024measure}. The approach of \citet{phillips2024measure} differs markedly from the traditional definition of the DNA barcoding gap laid out by \citet{meyer2005dna} and \citet{meier2008use} in that the proposed metrics incorporate interspecific distances which \textit{include} the target species of interest. Furthermore, if a focal species is found to have multiple nearest neighbours, then the species possessing the smallest average distance is used. These schemes more accurately account for species' coalescence processes inferred from contemporaneous samples of DNA sequences leading to instances of barcode sequence sharing, such as interspecific hybridization/introgression events \citep{phillips2024measure}. Within equations (3) and (4), the degree of distance distribution overlap between a target taxon and its nearest neighbouring species, gauged from magnitudes of $p'_x$ and $q'_x$, is directly proportional to the amount of time in which the two lineages diverged from the MRCA \citep{phillips2024measure}. Thus, the quantities can be used as a criterion to assess the failure of DNA barcoding in recently radiated taxonomic groups, among other plausible biological explanations.  Note, distances are constrained to the interval [0, 1], whereas the metrics are defined only on the interval [$a$/$a'$, $b$]. Values of the estimators obtained from equations (1)-(4) close to or equal to zero give evidence for separation between intraspecific and interspecific distance distributions; that is, values suggest the presence of a DNA barcode gap for a target species. Conversely, values near or equal to one give evidence for distribution overlap; that is, values likely indicate the absence of a DNA barcode gap. 
 
 \subsection{The Model}
 
