--- a/References.bib
+++ b/References.bib
@@ -336,7 +336,7 @@ year = {2002}
 
 @article{mutanen2016species,
   author = {Marko Mutanen and Sami M. Kivelä and Rutger A. Vos and Camiel Doorenweerd and Sujeevan Ratnasingham and Axel Hausmann and Peter Huemer and Vlad Dincă and Erik J. van Nieukerken and Carlos Lopez-Vaamonde and Roger Vila and Leif Aarvik and Thibaud Decaëns and Konstantin A. Efetov and Paul D. N. Hebert and Arild Johnsen and Ole Karsholt and Mikko Pentinsaari and Rodolphe Rougerie and Andreas Segerer and Gerhard Tarmann and Reza Zahiri and H. Charles J. Godfray},
-  title = {Species-Level Para- and Polyphyly in DNA Barcode Gene Trees: Strong Operational Bias in European Lepidoptera},
+  title = {Species-Level Para- and Polyphyly in {DNA} Barcode Gene Trees: Strong Operational Bias in European Lepidoptera},
   journal = {Systematic Biology},
   volume = {65},
   number = {6},
@@ -355,6 +355,19 @@ pages = {857-872},
 doi = {https://doi.org/10.1002/(SICI)1097-0258(19980430)17:8<857::AID-SIM777>3.0.CO;2-E},
 year = {1998}
 }
+
+@article{pante2016species,
+author = {Pante, Eric and Puillandre, Nicolas and Viricel, Amélia and Arnaud-Haond, Sophie and Aurelle, Didier and Castelin, Magalie and Chenuil, Anne and Destombe, Christophe and Forcioli, Didier and Valero, Myriam and Viard, Frédérique and Samadi, Sarah},
+title = {Species are hypotheses: {A}void connectivity assessments based on pillars of sand},
+journal = {Molecular Ecology},
+volume = {24},
+number = {3},
+pages = {525-544},
+doi = {https://doi.org/10.1111/mec.13048},
+year = {2015}
+}
+
+
 
 @article{paradis2004ape,
   author = {Paradis, E. and Claude, J. and Strimmer, K.},
@@ -521,6 +534,17 @@ number = {2},
 pages = {667-718},
 doi = {https://doi.org/10.1214/20-BA1221},
 year = {2021}
+}
+
+@article{wells2022species,
+  author = {Wells, Tom and Carruthers, Tom and Muñoz-Rodríguez, Pablo and Sumadijaya, Alex and Wood, John R I and Scotland, Robert W},
+  title = {Species as a Heuristic: Reconciling Theory and Practice},
+  journal = {Systematic Biology},
+  volume = {71},
+  number = {5},
+  pages = {1233--1243},
+  year = {2022},
+  doi = {10.1093/sysbio/syab087}
 }
 
  @book{wickham2016ggplot2,
