--- a/References.bib
+++ b/References.bib
@@ -75,6 +75,18 @@ doi = {10.18637/jss.v076.i01},
 author = {Carpenter, B and Gelman, A and Hoffman, MD and Lee, D and Goodrich, B and Betancourt, M and Brubaker, MA and Guo, J and Li, P and Riddell, A}
 }
 
+@article{carstens2013how,
+author = {Carstens, Bryan C. and Pelletier, Tara A. and Reid, Noah M. and Satler, Jordan D.},
+title = {How to fail at species delimitation},
+journal = {Molecular Ecology},
+volume = {22},
+number = {17},
+pages = {4369-4383},
+doi = {https://doi.org/10.1111/mec.12413},
+year = {2013}
+}
+
+
 @article{chen1999monte,
   author    = {Ming-Hui Chen and Qi-Man Shao},
   title     = {Monte {C}arlo Estimation of {B}ayesian Credible and {HPD} Intervals},
@@ -182,6 +194,16 @@ year = {1992}
   doi={10.1371/journal.pbio.0020312}
 }
 
+@article{hickerson2006dna,
+  author = {Michael J. Hickerson and Christopher P. Meyer and Craig Moritz},
+  title = {{DNA} Barcoding Will Often Fail to Discover New Animal Species over Broad Parameter Space},
+  journal = {Systematic Biology},
+  volume = {55},
+  number = {5},
+  pages = {729--739},
+  year = {2006},
+  doi = {10.1080/10635150600969898}
+}
 
 @article{hoffman2014no,
   title={The {N}o-{U}-{T}urn {S}ampler: {A}daptively Setting Path Lengths in {H}amiltonian {M}onte {C}arlo},
@@ -202,7 +224,7 @@ year = {1992}
   doi={10.1515/dna-2015-0006}
 }
 
-@article{Jackson2017phrapl,
+@article{jackson2017phrapl,
   author = {Jackson, Nathan D. and Morales, Ariadna E. and Carstens, Bryan C. and O'Meara, Brian C.},
   title = {{PHRAPL}: {P}hylogeographic Inference Using Approximate Likelihoods},
   journal = {Systematic Biology},
