--- a/References.bib
+++ b/References.bib
@@ -235,6 +235,17 @@ year = {1992}
   doi = {10.1093/sysbio/syx001}
 }
 
+@article{jackson2017species,
+  author = {Nathan D. Jackson and Bryan C. Carstens and Ariadna E. Morales and Brian C. O’Meara},
+  title = {Species Delimitation with Gene Flow},
+  journal = {Systematic Biology},
+  volume = {66},
+  number = {5},
+  pages = {799--812},
+  year = {2017},
+  doi = {10.1093/sysbio/syw117},
+}
+
 @article{jeffreys1946invariant,
   author    = {Jeffreys, H},
   title     = {An Invariant Form for the Prior Probability in Estimation Problems},
@@ -547,6 +558,17 @@ doi = {10.1007/978-1-0716-3581-0_24},
   url = {https://mc-stan.org/}
 }
 
+@article{stoeckle2014dna,
+  author = {Stoeckle, MY and Thaler, DS},
+  title = {DNA Barcoding Works in Practice but Not in (Neutral) Theory},
+  journal = {PLoS One},
+  year = {2014},
+  volume = {9},
+  number = {7},
+  pages = {e100755},
+  doi = {10.1371/journal.pone.0100755}
+}
+
 @article{vehtari2017rank,
 author = {Vehtari, A and Gelman, A and Simpson, D and Carpenter, B and B{\"u}rkner, P-C},
 title = {Rank-normalization, folding, and localization: {A}n improved \textit{{{\^ R}}} for assessing convergence of {MCMC} (with discussion)},
@@ -556,6 +578,16 @@ number = {2},
 pages = {667-718},
 doi = {https://doi.org/10.1214/20-BA1221},
 year = {2021}
+}
+
+@article{wiemers2007does,
+  title={Does the {DNA} barcoding gap exist? - a case study in blue butterflies ({L}epidoptera: {L}ycaenidae)},
+  author={Wiemers, M and Fiedler, K},
+  journal={Frontiers in Zoology},
+  volume={4},
+  number={8},
+  year={2007},
+  publisher={BioMed Central}
 }
 
 @article{wells2022species,
