--- a/BayesianDNABarcodeGap.tex
+++ b/BayesianDNABarcodeGap.tex
@@ -84,7 +84,7 @@ The routine use of DNA sequences (particularly mitochondrial DNA (mtDNA)) to sup
 
 The success of the single-locus approach, particularly for regulatory and forensic \\ applications, depends crucially on two important factors: (1) the availability of high-quality specimen records found in public reference sequence databases such as the Barcode of Life Data Systems (BOLD; http://www.barcodinglife.org) \citep{ratnasingham2007bold} and GenBank (https://www.ncbi.nlm.nih.gov/genbank/), and (2) the establishment of a DNA barcode gap --- the notion that the maximum genetic distance observed within species is much smaller than the minimum degree of marker variation found among species \citep{meyer2005dna, meier2008use}. Early work has demonstrated that the presence of a DNA barcode gap hinges strongly on extant levels of species haplotype diversity gauged from comprehensive specimen sampling at wide geographic and ecological scales \citep{bergsten2012effect, candek2015dna}. Despite this, many taxonomic groups lack adequate separation in their pairwise intraspecific and interspecific genetic distances due to varying rates of evolution in both genes and taxa \citep{pentinsaari2016molecular}. Furthermore, it has been well-demonstrated that the presence of a DNA barcode gap becomes less certain with increasing spatial scale of sampling since interspecific distances increase, while intraspecific distances shrink as more closely-related species are sampled \citep{phillips2022lack}. This can pose problems in cases of rare species or monotypic taxa, for instance \citep{ahrens2016rarity} and compromise rapid matching of unknown samples to expertly-validated references, leading to cases of false positives (taxon oversplitting) and false negatives (excessive lumping of taxa) as a result of incomplete lineage sorting, interspecies hybridization, genome introgression, species synonymy, cryptic species diversity, and misidentifications \citep{hubert2015dna, phillips2022lack}.
 
-Recent work has argued that DNA barcoding, in its current form, is lacking in statistical rigor, as most studies rely strongly on heuristic distance-based measures to infer taxonomic identity. Of these studies, few report measures of uncertainty, such as standard errors (SEs) and confidence intervals (CIs), around estimates of intraspecific and interspecific  variation (\textit{e.g.}, \citet{wiemers2007does}), calling into question the existence of a true species' DNA barcode gap \citep{candek2015dna, phillips2022lack}. To support this notion, novel nonparametric locus- and species-specific metrics based on the multispecies coalescent (MSC) were recently outlined by \citet{phillips2024measure}. The coalescent \citep{kingman1982coalescent, kingman1982genealogy} encompasses a backwards continuous-time stochastic Markov process of allelic sampling within natural, neutrally-evolving, species populations towards the most recent common ancestor (MRCA). Although framework plays a foundational role in evolutionary and \\ population genetics theory, it has been both underutilized and underappeciated within DNA barcoding. Unlike previously proposed MSC algorithmic approaches (of which there are too many to exhaustively list here), which generally assume a strict molecular clock and a simplified model of DNA sequence evolution across closely-related taxa from which an estimated species phylogeny may be constructed (\textit{e.g.}, with or without use of a guide tree) (\textit{e.g.}, \citet{rannala2003bayes, rannala2017efficient, yang2010bayesian, yang2014unguided, yang2017bayesian}), \citeauthor{phillips2024measure}'s (\citeyear{phillips2024measure}) approach is tree-free and does not require judicious parameter setting. Therefore, the method is extremely efficient and fast to run. 
+Recent work has argued that DNA barcoding, in its current form, is lacking in statistical rigor, as most studies rely strongly on heuristic distance-based measures to infer taxonomic identity. Of these studies, few report measures of uncertainty, such as standard errors (SEs) and confidence intervals (CIs), around estimates of intraspecific and interspecific  variation (\textit{e.g.}, \citet{wiemers2007does}), calling into question the existence of a true species' DNA barcode gap \citep{candek2015dna, phillips2022lack}. To support this notion, novel nonparametric locus- and species-specific metrics based on the multispecies coalescent (MSC) were recently outlined by \citet{phillips2024measure}. The coalescent \citep{kingman1982coalescent, kingman1982genealogy} encompasses a backwards continuous-time stochastic Markov process of allelic sampling within natural, neutrally-evolving, species populations towards the most recent common ancestor (MRCA). Although the coalescent sampling process plays a foundational role in evolutionary and population genetics theory due to its simplicity and flexibility, it has been both under-utilized and under-appreciated as a key player within DNA barcoding \citep{hubert2015dna, stoeckle2014dna, phillips2022lack}. Unlike previously proposed MSC algorithmic approaches (of which there are too many to exhaustively list here), which generally assume a strict molecular clock and a simplified model of DNA sequence evolution across closely-related taxa from which an estimated species phylogeny may be constructed (\textit{e.g.}, with or without use of a guide tree) (\textit{e.g.}, \citet{rannala2003bayes, rannala2017efficient, yang2010bayesian, yang2014unguided, yang2017bayesian}), \citeauthor{phillips2024measure}'s (\citeyear{phillips2024measure}) approach is tree-free and does not require judicious parameter setting. Therefore, the method is extremely efficient and fast to run. 
 
 The DNA barcode gap statistics have been shown to hold strong promise for reliable DNA barcode gap assessment when applied to predatory \textit{Agabus} (Coleoptera: Dytiscidae) diving beetles  \citep{phillips2024measure}. Despite their ease of sampling and well-established taxonomy, this group possesses few morphologically-distinct taxonomic characters that readily facilitate their assignment to the species level \citep{bergsten2012effect}. Further, the proposed metrics indicate that sister species pairs from this taxon are often difficult to distinguish on the basis of their DNA barcode sequences \citep{phillips2024measure}. Using sequence data from three mitochondrial cytochrome markers (5'-COI, 3'-COI, and cytochrome $b$ (CYTB)) obtained from BOLD and GenBank, results highlight that DNA barcoding has been a one-sided argument. \citeauthor{phillips2024measure}'s (\citeyear{phillips2024measure}) findings point to the need to balance both the sufficient collection of specimens, as well as the extensive sampling of species: DNA barcode libraries are biased toward the latter \citep{phillips2022lack}. 
 
