--- a/References.bib
+++ b/References.bib
@@ -31,7 +31,7 @@
 }
 
 
-@article {bartlett1992fins,
+@article{bartlett1992fins,
 	Title = {{FINS} (forensically informative nucleotide sequencing): {A} procedure for identifying the animal origin of biological specimens},
 	Author = {Bartlett, SE and Davidson, WS},
 	Number = {3},
@@ -52,6 +52,17 @@
   year={2012},
   month={10},
   doi={10.1093/sysbio/sys037}
+}
+
+@article{bouckaert2019beast,
+    author = {Bouckaert, Remco AND Vaughan, Timothy G. AND Barido-Sottani, Joëlle AND Duchêne, Sebastián AND Fourment, Mathieu AND Gavryushkina, Alexandra AND Heled, Joseph AND Jones, Graham AND Kühnert, Denise AND De Maio, Nicola AND Matschiner, Michael AND Mendes, Fábio K. AND Müller, Nicola F. AND Ogilvie, Huw A. AND du Plessis, Louis AND Popinga, Alex AND Rambaut, Andrew AND Rasmussen, David AND Siveroni, Igor AND Suchard, Marc A. AND Wu, Chieh-Hsi AND Xie, Dong AND Zhang, Chi AND Stadler, Tanja AND Drummond, Alexei J.},
+    journal = {PLOS Computational Biology},
+    title = {{BEAST} 2.5: An advanced software platform for Bayesian evolutionary analysis},
+    year = {2019},
+    volume = {15},
+    pages = {1-28},
+    number = {4},
+    doi = {10.1371/journal.pcbi.1006650},
 }
 
 @article{candek2015dna,
@@ -132,6 +143,28 @@ year = {1977}
   doi = {10.1093/molbev/msy147}
 }
 
+@article{fonseca2021gmyc,
+author = {Fonseca, Emanuel M. and Duckett, Drew J. and Carstens, Bryan C.},
+title = {{P2C2M.GMYC}: {A}n {R} package for assessing the utility of the {G}eneralized {M}ixed {Y}ule {C}oalescent model},
+journal = {Methods in Ecology and Evolution},
+volume = {12},
+number = {3},
+pages = {487-493},
+doi = {https://doi.org/10.1111/2041-210X.13541},
+year = {2021}
+}
+
+
+@article{fujisawa2013delimiting,
+  author    = {Fujisawa, T and Barraclough, TG},
+  title     = {Delimiting Species Using Single-Locus Data and the Generalized Mixed Yule Coalescent Approach: A Revised Method and Evaluation on Simulated Data Sets},
+  journal   = {Systematic Biology},
+  volume    = {62},
+  number    = {5},
+  pages     = {707--724},
+  year      = {2013},
+  doi       = {10.1093/sysbio/syt033}
+}
 
 @book{gelman2014bayesian,
   author = {Gelman, A and Carlin, JB. and Stern, HS. and Duncan, DB and Vehtari, A and Rubin, DB},
@@ -267,6 +300,17 @@ year = {1992}
   year={1969},
   address={New York},
   pages={21-132}
+}
+
+@article{kapli2017multirate,
+  author = {P. Kapli and S. Lutteropp and J. Zhang and K. Kobert and P. Pavlidis and A. Stamatakis and T. Flouri},
+  title = {Multi-rate Poisson tree processes for single-locus species delimitation under maximum likelihood and Markov chain Monte Carlo},
+  journal = {Bioinformatics},
+  volume = {33},
+  number = {11},
+  pages = {1630--1638},
+  year = {2017},
+  doi = {10.1093/bioinformatics/btx025}
 }
 
 @article{kimura1980simple,
@@ -465,6 +509,17 @@ pages = {375--390},
 doi = {10.1007/978-1-0716-3581-0_24},
 }
 
+@article{pons2006sequence,
+  author = {Joan Pons and Timothy G Barraclough and Jesus Gomez-Zurita and Anabela Cardoso and Daniel P Duran and Steaphan Hazell and Sophien Kamoun and William D Sumlin and Alfried P Vogler},
+  title = {Sequence-Based Species Delimitation for the DNA Taxonomy of Undescribed Insects},
+  journal = {Systematic Biology},
+  volume = {55},
+  number = {4},
+  pages = {595--609},
+  year = {2006},
+  doi = {10.1080/10635150600852011}
+  }
+
 @article{puillandre2011abgd,
   author = {Puillandre, Nicolas and Lambert, Antoine and Brouillet, Stéphane and Achaz, Guillaume},
   title = {ABGD, Automatic Barcode Gap Discovery for primary species delimitation},
@@ -649,4 +704,15 @@ year = {2021}
   pages = {e71378},
   year = {2021},
   doi = {10.3897/BDJ.9.e71378}
+}
+
+@article{zhang2013general,
+  author = {Zhang, J. and Kapli, P. and Pavlidis, P. and Stamatakis, A.},
+  title = {A general species delimitation method with applications to phylogenetic placements},
+  journal = {Bioinformatics},
+  year = {2013},
+  volume = {29},
+  number = {22},
+  pages = {2869--2876},
+  doi = {10.1093/bioinformatics/btt499}
 }
